# daHoudiniEngine

./: .env  .gitignore  CMakeLists.txt  HAPI3_CPP.h  HAPI_CPP.h  Makefile.sample  README.da  daHEngine.cpp  daHEngine.event.cpp  daHEngine.parm.cpp  daHEngine.processAsset.cpp  daHEngine.sharedData.cpp  daHEngine.static.cpp  daHEngine.util.cpp  daHoudiniEngine.cpp  enginesimplehostcpp.C  houdiniAsset.cpp  houdiniGeometry.cpp  houdiniParameter.cpp  houdiniUiParm.cpp  loaderTools.cpp  make_enginesimplehostcpp.sh  switch_asset.otl  workspace.code-workspace
common/: houdini.frag  houdini.vert
daHoudiniEngine/: daHEngine.h  houdiniAsset.h  houdiniGeometry.h  houdiniParameter.h  loaderTools.h
daHoudiniEngine/UI/: houdiniUiParm.h
daPly/: ReaderWriterPLY.cpp  ReaderWriterPly.h  vertexData.cpp  vertexData.h
examples/daHoudiniEngine/: CMakeLists.txt  daHoudiniEngine.cpp
examples/daOsgHEngine/: CMakeLists.txt  daOsgHEngine.cpp
examples/python/: DA_Cluster.py  DA_Cubes.py  DA_HEngine.py  ParmTests.py  TestSuite.py  TextBox.py  ToolTest.py  UITest.py
otl/: axis3D.otl  axisA1.otl  cluster.otl  cubes.otl  mat_test.otl  multiAsset.otl  switch_asset.otl  text.otl  textured_plain.otl
otl/Scanned/: stack_generator.otl
samples/objects/: Makefile.sample  objects.C
samples/parameters/: Makefile.sample  parameters.C
